// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserIcon tests default renderer 1`] = `
<IconButton
  label="label"
>
  <React.Fragment>
    <ForwardRef
      className="LoginSignUpButton"
      to="/login-signup"
    >
      <UNDEFINED />
    </ForwardRef>
  </React.Fragment>
</IconButton>
`;

exports[`UserIcon tests with user 1`] = `
<IconButton
  label="Some Name"
>
  <React.Fragment>
    <ForwardRef(WithStyles)
      className="UserIcon__Avatar some-green-class"
    >
      SN
    </ForwardRef(WithStyles)>
  </React.Fragment>
</IconButton>
`;

exports[`UserIcon tests with user with facebook photos 1`] = `
<IconButton
  label="Some Name"
>
  <React.Fragment>
    <ForwardRef(WithStyles)
      className="UserIcon__Avatar some-green-class"
    >
      <img
        alt="Some Name"
        src="some-picture-link.png"
      />
    </ForwardRef(WithStyles)>
  </React.Fragment>
</IconButton>
`;
